# ContinuousMathModels

lab1/: CMakeLists.txt  NMM_LB1_report.docx  b_vector_ops.cpp  cubic_hermit_spline.cpp  difference.cpp  global_matrix.cpp  global_vector.cpp  header.h  hermit_base_functions.cpp  local_matrix.cpp  lu_decomp.cpp  main.cpp  make_grid.cpp  matrix_operations.cpp  spline_plots.R
lab1/resources/: cubic_clean.txt  cubic_errored.txt  cubic_noized.txt  exp_errored.txt  grid.txt  linear_clean.txt  linear_noized.txt  model_3.txt  sin_clean.txt  sin_noized.txt
